# py-fastapi-docker-nickramsay-dev

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  start.sh
app/: app.py  database.py  server.py
app/static/: style.css
app/templates/: index.html  post.html  unknown-post.html
db/: posts.db  setup.sh
