[tool.poetry]
name = "py-fastapi-react-nickramsay-dev"
version = "0.1.0"
description = ""
authors = ["Nicholas Ramsay <nickramsay19@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11.3"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.scripts]
start = "app.server:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
